--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.5.6"
+    "@astrojs/tailwind": "^3.1.3",
+    "astro": "^2.5.7",
+    "astro-icon": "^0.8.0",
+    "astro-navbar": "^1.2.0",
+    "astro-seo": "^0.7.2",
+    "tailwindcss": "^3.3.2",
+    "typed.js": "^2.0.16"
+  },
+  "devDependencies": {
+    "prettier-plugin-astro": "^0.10.0"
   }
 }
