--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.3",
+    "@astrojs/vercel": "^3.4.1",
     "astro": "^2.5.7",
     "astro-icon": "^0.8.0",
     "astro-navbar": "^1.2.0",
