--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/tailwind": "^3.1.3",
-    "@astrojs/vercel": "^3.4.1",
-    "astro": "^2.5.7",
-    "astro-icon": "^0.8.0",
-    "astro-navbar": "^1.2.0",
-    "astro-seo": "^0.7.2",
-    "tailwindcss": "^3.3.2",
-    "typed.js": "^2.0.16"
-  },
-  "devDependencies": {
-    "prettier-plugin-astro": "^0.10.0"
-  }
+	"name": "portfolio-asto-js",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/tailwind": "^3.1.3",
+		"@astrojs/vercel": "^3.4.1",
+		"astro": "^2.5.7",
+		"astro-icon": "^0.8.0",
+		"astro-navbar": "^1.2.0",
+		"astro-seo": "^0.7.2",
+		"tailwindcss": "^3.3.2",
+		"typed.js": "^2.0.16"
+	},
+	"devDependencies": {
+		"prettier-plugin-astro": "^0.10.0"
+	}
 }
